--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -4,9 +4,16 @@
         <meta charset="UTF-8">
         <title>Universidad de las mejores</title>
     <body>
-        <div id="menu" class="col-xs-10 col-sm-20 cold-md-50">
-          <nav>
-            <ul class="primer_tab">  
+      <div id="menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="navbar-collapse collapse" id="navbarSupportedContent" style="height: 50px;">
+          
+            <ul class="primer_tab nav navbar-nav">
+            
               <%if(!(user)){%>
                   <li><a href="/">Universidad</a></li>
                 <%}%>
@@ -18,7 +25,8 @@
                   <%if(user.rol == "Administrador"){%>
                   <li><a href="/usuarios">Usuarios</a></li>
                   <%}%>
-                <div class="derecha">
+
+                <div class="derecha nav navbar-nav">
                   <%if(user){%>
                   <li><a href="/info_usuarios">Mi usuario</a></li>
                   <%}%>
@@ -26,8 +34,9 @@
                 </div>
                 <%}%>
             </ul>
-        </nav>
         </div>
+        </nav>
+      </div>
 <style>
   
   ul {
