--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -4,19 +4,16 @@
         <meta charset="UTF-8">
         <title>Universidad de las mejores</title>
     <body>
+      <%if(user){%>
       <div id="menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           
           <div class="navbar-collapse collapse" id="navbarSupportedContent" style="height: 50px;">
           
-            <ul class="primer_tab nav navbar-nav">
-            
-              <%if(!(user)){%>
-                  <li><a href="/">Universidad</a></li>
-                <%}%>
+            <ul class="primer_tab navbar-nav">                
                 <%if(user){%>
                 <li><a href="/asignaturas">Asignaturas</a></li>
                 <%if(user.rol == "Alumno"){%>
@@ -26,17 +23,19 @@
                   <li><a href="/usuarios">Usuarios</a></li>
                   <%}%>
 
-                <div class="derecha nav navbar-nav">
-                  <%if(user){%>
-                  <li><a href="/info_usuarios">Mi usuario</a></li>
-                  <%}%>
-                  <li><a href="/logout">Cerrar sesion</a></li>
-                </div>
-                <%}%>
+
             </ul>
+            <ul class="primer_tab navbar-nav ml-auto">
+              <%if(user){%>
+              <li><a href="/info_usuarios">Mi usuario</a></li>
+              <%}%>
+              <li><a href="/logout">Cerrar sesion</a></li>
+              </ul>
+          <%}%>
         </div>
         </nav>
       </div>
+      <%}%>
 <style>
   
   ul {
@@ -51,10 +50,6 @@
     float: left;
   }
 
-  .derecha {
-    float: right;
-  }
-  
   /* clear float */
   ul:after {
     clear: both;
