Se eliminan ficheros al eliminar la entrada, tanto en asignatura como software

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
@@ -59,7 +59,7 @@
                 <% } %>  
             </td>
             <td>
-              <a id="eliminar" onclick="pop_up()" href="/software/delete/<%= asignatura._id %>/<%= software[i]._id %>" class="btn btn-danger" >Delete</a>
+              <a id="eliminar" href="/software/delete/<%= asignatura._id %>/<%= software[i]._id %>" class="btn btn-danger" >Delete</a>
             </td>
       </tr>
     <% } %>  
